k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'random-meal-service'
  namespace: 'random-meal'
spec:
  ports:
  - name: openresty
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: 'random-meal'
  sessionAffinity: None
  type: ClusterIP
